# ibc-rs

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  add_verify_fast_annotations.sh  alice_key.json  analyze.py  analyze_derive.py  categorize_errors.py  change_derive.sh  comparison.md  compute-stats.sh  ibc.rs  mkPanic.sh  mkTrusted.sh  remove-unsupported.sh  repo-context.graffle  rust-toolchain  tools.py
e2e/: run.py
e2e/e2e/: cmd.py  relayer.py
modules/: Cargo.toml  Prusti.toml  config.toml
modules/src/: events.rs  handler.rs  lib.rs  macros.rs  out  proofs.rs  query.rs  serializers.rs  signer.rs  test.rs  test_utils.rs  timestamp.rs  tx_msg.rs  utils.rs
modules/src/application/ics20_fungible_token_transfer/: error.rs  relay_application_logic.rs
modules/src/application/ics20_fungible_token_transfer/msgs/: transfer.rs
modules/src/application/ics20_fungible_token_transfer/relay_application_logic/: send_transfer.rs
modules/src/ics02_client/: client_consensus.rs  client_def.rs  client_misbehaviour.rs  client_state.rs  client_type.rs  context.rs  error.rs  events.rs  handler.rs  header.rs  height.rs  misbehaviour.rs  msgs.rs
modules/src/ics02_client/handler/: create_client.rs  update_client.rs  upgrade_client.rs
modules/src/ics02_client/msgs/: create_client.rs  misbehavior.rs  update_client.rs  upgrade_client.rs
modules/src/ics03_connection/: connection.rs  context.rs  error.rs  events.rs  handler.rs  msgs.rs  version.rs
modules/src/ics03_connection/handler/: conn_open_ack.rs  conn_open_confirm.rs  conn_open_init.rs  conn_open_try.rs  verify.rs
modules/src/ics03_connection/msgs/: conn_open_ack.rs  conn_open_confirm.rs  conn_open_init.rs  conn_open_try.rs
modules/src/ics04_channel/: channel.rs  context.rs  error.rs  events.rs  handler.rs  msgs.rs  packet.rs  packet_handler.rs  version.rs
modules/src/ics04_channel/handler/: acknowledgement.rs  chan_close_confirm.rs  chan_close_init.rs  chan_open_ack.rs  chan_open_confirm.rs  chan_open_init.rs  chan_open_try.rs  recv_packet.rs  send_packet.rs  timeout.rs  timeout_on_close.rs  verify.rs  write_acknowledgement.rs
modules/src/ics04_channel/msgs/: acknowledgement.rs  chan_close_confirm.rs  chan_close_init.rs  chan_open_ack.rs  chan_open_confirm.rs  chan_open_init.rs  chan_open_try.rs  recv_packet.rs  timeout.rs  timeout_on_close.rs
modules/src/ics04_channel/packet_handler/: recv_packet.rs  send_packet.rs  verify.rs
modules/src/ics05_port/: capabilities.rs  error.rs
modules/src/ics07_tendermint/: client_def.rs  client_state.rs  consensus_state.rs  error.rs  header.rs  misbehaviour.rs
modules/src/ics18_relayer/: context.rs  error.rs  utils.rs
modules/src/ics23_commitment/: commitment.rs  error.rs  merkle.rs  specs.rs
modules/src/ics24_host/: error.rs  identifier.rs  path.rs  validate.rs
modules/src/ics26_routing/: error.rs  handler.rs  msgs.rs
modules/src/mock/: client_def.rs  client_state.rs  context.rs  header.rs  host.rs  misbehaviour.rs
modules/tests/: mbt.rs  model_based.rs  stateright.rs
modules/tests/executor/: mod.rs  step.rs
modules/tests/runner/: mod.rs  step.rs
modules/tests/support/model_based/: IBC.cfg  IBC.tla  IBCDefinitions.tla  IBCTests.cfg  IBCTests.tla  ICS03.tla
modules/tests/support/model_based/tests/: ICS03ConnectionMismatchTest.json
nft-swap/: Cargo.toml  extract.py  test-both.sh
nft-swap/src/: main.rs  swap.rs  swap_properties.rs  swap_resource.rs  swap_resource_properties.rs  types.rs
proto/: Cargo.toml
proto/src/: lib.rs
proto/src/prost/: cosmos.auth.v1beta1.rs  cosmos.base.query.v1beta1.rs  cosmos.base.reflection.v1beta1.rs  cosmos.base.tendermint.v1beta1.rs  cosmos.base.v1beta1.rs  cosmos.gov.v1beta1.rs  cosmos.staking.v1beta1.rs  cosmos.tx.v1beta1.rs  cosmos.upgrade.v1beta1.rs  ibc.applications.transfer.v1.rs  ibc.core.channel.v1.rs  ibc.core.client.v1.rs  ibc.core.commitment.v1.rs  ibc.core.connection.v1.rs  ibc.lightclients.tendermint.v1.rs  ics23.rs  tendermint.abci.rs
relayer/: Cargo.toml
relayer-cli/: Cargo.toml
relayer-cli/src/: cli_utils.rs  lib.rs
relayer-rest/: Cargo.toml
relayer/src/: account.rs  cache.rs  chain.rs  channel.rs  config.rs  connection.rs  denom.rs  error.rs  event.rs  foreign_client.rs  keyring.rs  lib.rs  light_client.rs  link.rs  macros.rs  object.rs  path.rs  registry.rs  rest.rs  sdk_error.rs  spawn.rs  supervisor.rs  telemetry.rs  transfer.rs  upgrade_chain.rs  util.rs  (+1 more)
scripts/: one-chain  setup-chains
token-swap/: Cargo.toml  extract.py  make_single_files.sh  min.rs  min.vpr  orig.rs  out.vpr  patheq.vpr  perm-map.vpr  resource.rs  swap.bad.rs  swap.rs  swap.vpr  swap_resource.rs  time.sh
(+126 files in other folders)
