[workspace]

members = [
    "relayer",
    "relayer-cli",
    "telemetry",
]

exclude = [
    "modules",
    "no-std-check",
    "proto",
    "proto-compiler"
]

[patch.crates-io]
prost-derive = { git = "https://github.com/zgrannan/prost", branch = "prusti" }
# tendermint              = { git = "https://github.com/informalsystems/tendermint-rs", branch = "master" }
# tendermint-rpc          = { git = "https://github.com/informalsystems/tendermint-rs", branch = "master" }
# tendermint-proto        = { git = "https://github.com/informalsystems/tendermint-rs", branch = "master" }
# tendermint-light-client = { git = "https://github.com/informalsystems/tendermint-rs", branch = "master" }
# tendermint-testgen      = { git = "https://github.com/informalsystems/tendermint-rs", branch = "master" }
