[package]
name       = "ibc"
version    = "0.1.1"
edition    = "2018"
license    = "Apache-2.0"
readme     = "README.md"
keywords   = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository = "https://github.com/informalsystems/ibc-rs"
authors    = [
  "Informal Systems <hello@informal.systems>"
]

description = """
    Implementation of the Inter-Blockchain Communication Protocol (IBC).
    This crate comprises the main data structures and on-chain logic.
"""

[features]
# This feature grants access to development-time mocking libraries, such as `MockContext` or `MockHeader`.
# Depends on the `testgen` suite for generating Tendermint light blocks.
mocks = [ "tendermint-testgen", "sha2" ]

[dependencies]
# Proto definitions for all IBC-related interfaces, e.g., connections or channels.
ibc-proto = { version = "0.7.1", path = "../proto" }
anomaly = { version = "0.2.0", default-features = false }
chrono = "0.4"
thiserror = "1.0.24"
serde_derive = "1.0.104"
serde = "1.0.124"
serde_json = "1"
tracing = "0.1.13"
prost = "0.7"
prost-types = "0.7"
bytes = "1.0.0"
dyn-clonable = "0.9.0"
regex = "1"
bech32 = "0.8.0"
subtle-encoding = "0.5"
sha2 = { version = "0.9.3", optional = true }

[dependencies.tendermint]
git = "https://github.com/vitorenesduarte/tendermint-rs"
rev = "29174f580dec1ac3cbb2de9e04329ad8f745ae04"

[dependencies.tendermint-proto]
git = "https://github.com/vitorenesduarte/tendermint-rs"
rev = "29174f580dec1ac3cbb2de9e04329ad8f745ae04"

[dependencies.tendermint-testgen]
git = "https://github.com/vitorenesduarte/tendermint-rs"
rev = "29174f580dec1ac3cbb2de9e04329ad8f745ae04"
optional = true

[dev-dependencies]
modelator = { git = "https://github.com/informalsystems/modelator", rev = "7923008f28e777819cf8b221666f99fcddf5f323" }
tokio = { version = "1.0", features = ["macros"] }
stateright = "0.22.2"
num_cpus = "1.13.0"
tracing-subscriber = "0.2.16"
sha2 = "0.9.3"

[dev-dependencies.tendermint-testgen]
git = "https://github.com/vitorenesduarte/tendermint-rs"
rev = "29174f580dec1ac3cbb2de9e04329ad8f745ae04"

[dev-dependencies.tendermint-rpc]
git = "https://github.com/vitorenesduarte/tendermint-rs"
rev = "29174f580dec1ac3cbb2de9e04329ad8f745ae04"
features = ["http-client", "websocket-client"]

[[test]]
name = "mbt"
path = "tests/mbt.rs"
required-features = ["mocks"]

[[test]]
name = "stateright"
path = "tests/stateright.rs"
required-features = ["mocks"]
