[package]
name    = "ibc-proto"
version = "0.7.0"
authors = ["Greg Szabo <greg@informal.systems>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/informalsystems/ibc-proto/tree/master/ibc_proto"
readme     = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords   = ["blockchain", "cosmos", "tendermint", "ibc", "proto"]
exclude = ["definitions"]

description = """
    ibc-proto is a the Rust implementation of the Cosmos SDK proto structs.
    """

[lib]
name = "ibc_proto"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true

[dependencies]
prost = "0.7"
prost-types = "0.7"
anomaly = { version = "0.2", default-features = false }
bytes = "1.0"
thiserror = "1.0"
tonic = "0.4"

[dependencies.tendermint-proto]
git = "https://github.com/vitorenesduarte/tendermint-rs"
rev = "29174f580dec1ac3cbb2de9e04329ad8f745ae04"
